[package]
name = "seapricesubmitter"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "^0.12.0", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }
futures = "0.3.28"
serde = { version = "1.0.218", features = ["derive"] }
once_cell = "1.20.3"
serde_json = "1.0.140"
clap = { version = "4.5", features = ["derive"] }
clap_derive = "4.5"
reqwest = { version =  "0.12.12" , features = ["json"] }
rand = "0.9.0"
dotenvy = "0.15"
tokio = {version ="1.44.0" ,features = ["full"] }
num-traits = "0.2.19"
num-bigint = "0.4.6"
dotenv = "0.15.0"
chrono = "0.4.40"
rocket = { version = "0.5.1", features = ["json"] } 
